--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "debug": "^2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "socket.io": "^4.0.1"
   },
