--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "socket.io": "^4.0.1"
   },
   "scripts": {
